--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Leaderboard</h1>
+    <h1>TOP 10</h1>
     <div id="leaderboard"></div> <!-- Leaderboard section -->
 
     <!-- Link to go back to the voting page -->
